--- a/Module-17-Challenge-Resources/credit_risk_ensemble.ipynb
+++ b/Module-17-Challenge-Resources/credit_risk_ensemble.ipynb
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
        "EasyEnsembleClassifier(n_estimators=100, random_state=1)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,16 +1396,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7877672625306695"
+       "0.925427358175101"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,23 +1414,23 @@
     "# Calculated the balanced accuracy score\n",
     "# YOUR CODE HERE\n",
     "\n",
-    "y_pred1 = brf.predict(X_test)\n",
+    "y_pred1 = eec.predict(X_test)\n",
     "balanced_accuracy_score(y_test,y_pred1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   58,    29],\n",
-       "       [ 1560, 15558]])"
+       "array([[   79,     8],\n",
+       "       [  979, 16139]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1453,10 +1453,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.04      0.67      0.91      0.07      0.78      0.59        87\n",
-      "   low_risk       1.00      0.91      0.67      0.95      0.78      0.62     17118\n",
+      "  high_risk       0.07      0.91      0.94      0.14      0.93      0.85        87\n",
+      "   low_risk       1.00      0.94      0.91      0.97      0.93      0.86     17118\n",
       "\n",
-      "avg / total       0.99      0.91      0.67      0.95      0.78      0.62     17205\n",
+      "avg / total       0.99      0.94      0.91      0.97      0.93      0.86     17205\n",
       "\n"
      ]
     }
@@ -1466,13 +1466,6 @@
     "# YOUR CODE HERE\n",
     "print(classification_report_imbalanced(y_test, y_pred1))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
